--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,27 @@
 spring:
   application:
     name: CineBase
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/cinebase
+    username: shkalinux
+    password: 221025
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+
+  jackson:
+    serialization:
+      indent_output: true
+
+server:
+  port: 8080
+  error:
+    include-message: always
