--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Chaves JWT ###
+src/main/resources/app.key
+src/main/resources/app.pub
+
+### SQL e dados locais ###
+src/main/resources/import.sql
+
 ### STS ###
 .apt_generated
 .classpath
