--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.postgresql:postgresql'
-	compileOnly 'org.projectlombok:lombok'
+  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+  implementation("org.springframework.security:spring-security-oauth2-jose:6.5.6")
+  compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	annotationProcessor 'org.projectlombok:lombok'
