--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/cinebase
-    username: shkalinux
+    username: shakalinux
     password: 221025
     driver-class-name: org.postgresql.Driver
 
